# Joint-Registration-of-Multiple-Point-Clouds-for-Fast-Particle-Fusion-in-Localization-Microscopy

./: 2d  Demo_JCC.m  README.md
2d/: Demo_JCC.m
2d/Functions/: Compare2Clusters.m  Cost_2D_cpu.m  H_Clustering.m  K_estimate.m  MeanShiftCluster.m  Run_Classification.m  Run_Connection.m  Run_DissimilarityMatrixCalculation.m  Run_JRMPC.m  Run_MainClusterFRC.m  jrmpc_2D_Nooutliers.m  jrmpc_2D_origin.m  renderprojection2D.m
2d/expdist/: expdist.cu
2dCode/: Function
2dCode/Functions/: Cost_2D_cpu.m  Cost_2D_gpu.m  Run_Classification.m  Run_DissimilarityMatrixCalculation.m  jrmpc_2D_Nooutliers.m  jrmpc_2D_origin.m
3d/: CMakeLists.txt  Demo_JCC_3D.m  LICENSE  Makefile  README.md  cmake_install.cmake
3d/Functions_3D/: Cost_3DReal_cpu.m  Cost_3DReal_gpu.m  Draw3DFigure.m  MDS_Clustering3D.m  MeanShiftCluster.m  Prapare_Input_particles.m  Run_Classification3D.m  Run_DissimilarityMatrixCalculation3D.m  Run_JRMPC3D.m  correct_uncer.m  jrmpc.m  jrmpc_Nooutliers.m
3d/expdist/: CMakeLists.txt  expdist.cu  expdist.h  expdist_c.cu  expdist_functions.cuh  expdist_ref.cu  expdist_ref.h  kernels.cu
3d/expdist/mex/: mex_expdist.cpp
3d/figtree/: CMakeLists.txt  README.md  copyright.txt
3d/figtree/matlab/: figtree.m  figtreeChooseEvaluationMethod.m  figtreeKCenterClustering.m
3d/figtree/python/: figtree.pyx
3d/figtree/samples/: CMakeLists.txt  matlab_sample1_simple.m  matlab_sample2_diff_methods.m  matlab_sample3_auto_selection.m  sample.cpp
3d/figtree/src/: CMakeLists.txt
3d/figtree/src/mex/: CMakeLists.txt  mexFigtree.cpp  mexFigtree.def  mexFigtreeChooseEvaluationMethod.cpp  mexFigtreeChooseEvaluationMethod.def  mexFigtreeKCenterClustering.cpp  mexFigtreeKCenterClustering.def
3d/figtree/test/: CMakeLists.txt  test.cpp
3d/gausstransform/: gausstransform.h  gausstransform_ref.h  kernels.cu
3d/gausstransform/mex/: CMakeLists.txt  mex_gausstransform.cpp
3d/test/: test_expdist_ref.py  test_gausstransform.py  test_gausstransform_ref.py  test_matrix_functions.py
3dcode/: README.md  SimulatedNup107With65%DOL.mat  read me
3dcode/Functions_3D/: Compare2Clusters.m  ConnectParticlesInDifferentClusterWithSigma.m  Cost_3DReal.m  Cost_3DReal_cpu.m  Cost_3DReal_gpu.m  Draw3DAviProjection.m  H_Clustering.m  K_estimate.m  MDS_Clustering3D.m  ProcessedExperimentalDataPraticle.m  Run_Classification3D.m  Run_Connection.m  Run_DissimilarityMatrixCalculation3D.m  Run_JRMPC3D.m  renderprojection.m  visualizeCloud3D2.m
3dcode/expdist/: matrix_functions.cuh
3dcode/expdist/mex/: CMakeLists.txt  mex_expdist_cpu.cpp
3dcode/gausstransform/: CMakeLists.txt  gausstransform.cu  gausstransform_c.cpp  kernels.cuh
3dcode/gausstransform/mex/: mex_gausstransform_cpu.cpp
3dcode/test/: manualCostFunction.m  testMexExpDist.m  test_expdist.py  test_utils.py
Functions/: ConnectParticlesInDifferentCluster.m  Cost_2D.m  MDS_Clustering.m  PrepareInputParticles.m  Run_JRMPC.m  visualizeCloud2DW.m
reconstructions_for_figures/: fig2f_549_TUD_30%.mat  fig4e_304_2DNUP.mat  fig5k_306_3DNUP_PAINT.mat  fig5p_356_3DNUP_STORM.mat
